add delete button for last item

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 <button class="add-city btn">Add your city in list</button>
                 <button class="gen-tbl btn">Generate Table</button>
                 <button class="clr-bth btn">Clear input & output</button>
+                <button class="dlt-btn btn">Delete last</button>
             </div>
             
             <div class="output">
